--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "dependencies": {
     "axios": "^0.20.0",
+    "deep-equal": "^2.0.3",
     "jsonld": "^3.1.1",
+    "jsonld-streaming-parser": "^2.1.0",
     "microdata-node": "^2.0.0",
     "minimist": "^1.2.5",
+    "mocha": "^8.1.3",
     "n3": "^1.6.3",
     "rdf-ext": "^1.3.0",
     "rdf-validate-shacl": "^0.2.3",
@@ -15,5 +18,8 @@
   },
   "devDependencies": {
     "webpack-cli": "^3.3.12"
+  },
+  "scripts": {
+    "test": "mocha"
   }
 }
