--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
     "axios": "^0.20.0",
     "child_process": "^1.0.2",
     "jsonld": "^3.1.1",
+    "microdata-rdf-streaming-parser": "^1.1.0",
     "minimist": "^1.2.5",
-    "mocha": "^8.1.3",
     "n3": "^1.6.3",
     "rdf-ext": "^1.3.0",
     "rdf-validate-shacl": "^0.2.3",
-    "rdfa-streaming-parser": "^1.2.2",
-    "streamify-string": "^1.0.1",
-    "webpack": "^4.44.1"
+    "rdfa-streaming-parser": "^1.2.2"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack": "^4.44.1",
+    "mocha": "^8.1.3"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --timeout 0"
   }
 }
